# rust-dynamic-function-params

./: Cargo.toml
src/: context.rs  dyn_fn.rs  main.rs
